RESOLVED FIXED119576
Moved ErrorConstructor and NativeErrorConstructor helper functions into the Interpreter class
https://bugs.webkit.org/show_bug.cgi?id=119576
Summary Moved ErrorConstructor and NativeErrorConstructor helper functions into the I...
Mark Lam
Reported 2013-08-08 09:13:33 PDT
This change is needed in preparation for making Interpreter::getStackTrace() private in https://bugs.webkit.org/show_bug.cgi?id=119575.
Attachments
The patch. (5.63 KB, patch)
2013-08-08 09:22 PDT, Mark Lam
no flags
Mark Lam
Comment 1 2013-08-08 09:22:05 PDT
Created attachment 208350 [details] The patch. This patch has already been reviewed by Oliver Hunt in https://bugs.webkit.org/show_bug.cgi?id=119575. I'm submitting it here so that I can land it separately as a sub-patch.
Mark Lam
Comment 2 2013-08-08 09:38:34 PDT
Note You need to log in before you can comment on or make changes to this bug.